(library
 (name        coinbasepro)
 (public_name coinbasepro)
 (modules coinbasepro)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fixtypes
   hex
   ptime
   uuidm
   uri
   ezjsonm
   ocplib-json-typed))

(library
 (name        coinbasepro_rest)
 (public_name coinbasepro-rest)
 (modules coinbasepro_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   coinbasepro
   sexplib
   uuidm
   uri
   logs-async
   ocplib-json-typed
   fastrest
   fixtypes))

(library
 (name        coinbasepro_ws)
 (public_name coinbasepro-ws)
 (modules coinbasepro_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   coinbasepro
   ptime
   base64
   digestif.c
   uuidm
   uri
   ocplib-json-typed
   fixtypes))
