(library
 (name        coinbasepro)
 (public_name coinbasepro)
 (modules coinbasepro)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fixtypes
   ptime
   uuidm
   ocplib-json-typed))

(library
 (name        coinbasepro_rest)
 (public_name coinbasepro-rest)
 (modules coinbasepro_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   base64
   digestif
   coinbasepro
   core
   uuidm
   uri
   ocplib-json-typed
   fastrest
   fixtypes))

(library
 (name        coinbasepro_ws)
 (public_name coinbasepro-ws)
 (modules coinbasepro_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   sexplib
   ezjsonm
   coinbasepro
   ptime
   base64
   digestif.c
   uuidm
   uri
   ocplib-json-typed
   fixtypes))
